added navbar and footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,23 @@
-<div class="h-96 bg-pri-100 px-32 py-16">
-    <div class="font-sans font-extrabold ">Hello world</div>
+<div class="h-96 w-full bg-pri-100 px-32 py-16 grid grid-cols-3 justify-between gap-40">
+    <div class="flex flex-col">
+        <div class="font-sans font-extrabold text-5xl text-white">Budi</div>
+        <div class="text-xl text-white font-sans font-semibold">Reducing Costs, Empowering All: Our Planet, Your Savings.</div>
+        <div class="flex">
+            <!-- Linkedin, Facebook, Instagram -->
+        </div>
+    </div>
+    <div class="flex flex-col">
+        <div class="font-sans font-extrabold text-2xl text-white">Quicklinks</div>
+        <div class="flex flex-col text-white text-xl gap-2 pt-8">
+            <a href="#">About us</a>
+            <a href="#">Our solution</a>
+            <a href="#">Our impact</a>
+            <a href="#">Our mission</a>
+        </div>
+    </div>
+    <div class="flex flex-col">
+        <div class="font-sans font-extrabold text-2xl text-white">Have any questions?</div>
+        <div class="text-white text-xl pt-8">Enter your email and our team will assist you</div>
+        <!-- Email Bar -->
+    </div>
 </div>
