--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Footer from '../components/Footer.astro';
+import Navbar from '../components/Navbar.astro';
 ---
 
 <Layout title="Main page">
-	<div class="bg-red-800 p-4">Hello World!</div>
+	<Navbar/>
+	<div class="p-4">Hello World!</div>
 	<Footer/>
 </Layout>
