--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Hero from "../components/Hero.jsx";
 <Layout title="Main page">
   <div class="bg-red-800 p-4">Hello World!</div>
   <div class="bg-hero-pattern bg-cover bg-no-repear bg-center">
-    <Hero />
+    <Hero client:load />
   </div>
 
   <Footer />
