--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,13 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
 import Footer from '../components/Footer.astro';
 import Navbar from '../components/Navbar.astro';
+import Cards from '../components/Cards.astro';
 ---
 
 <Layout title="Main page">
 	<Navbar/>
 	<div class="p-4">Hello World!</div>
+	<Cards/>
 	<Footer/>
 </Layout>
