--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -2,60 +2,15 @@
 interface Props {
 	title: string;
 	body: string;
-	href: string;
+	img_href: string;
+	type: boolean;
 }
 
-const { href, title, body } = Astro.props;
+const { title, body, img_href, type } = Astro.props;
 ---
 
-<li class="link-card">
-	<a href={href}>
-		<h2>
-			{title}
-			<span>&rarr;</span>
-		</h2>
-		<p>
-			{body}
-		</p>
-	</a>
-</li>
-<style>
-	.link-card {
-		list-style: none;
-		display: flex;
-		padding: 1px;
-		background-color: #23262d;
-		background-image: none;
-		background-size: 400%;
-		border-radius: 7px;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
-	}
-	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: calc(1.5rem - 1px);
-		border-radius: 8px;
-		color: white;
-		background-color: #23262d;
-		opacity: 0.8;
-	}
-	h2 {
-		margin: 0;
-		font-size: 1.25rem;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-	p {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
-	}
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-		background-image: var(--accent-gradient);
-	}
-	.link-card:is(:hover, :focus-within) h2 {
-		color: rgb(var(--accent-light));
-	}
-</style>
+<div class=`shadow-2xl ${type ? "bg-pri-80": "bg-white"} w-[360px] h-96 pt-20 pb-12 px-12 flex flex-col rounded-[32px] justify-between items-center`>
+	<img class="h-20" src={img_href}>
+	<div class=`${type ? "text-sec-80": "text-pri-80"} font-semibold text-2xl flex justify-center`>{title}</div>
+	<div class=`${type ? "text-white": "text-gray-500"} text-md flex text-center`>{body}</div>
+</div>
