--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -9,8 +9,8 @@ interface Props {
 const { title, body, img_href, type } = Astro.props;
 ---
 
-<div class=`shadow-2xl ${type ? "bg-pri-80": "bg-white"} w-[360px] h-96 pt-20 pb-12 px-12 flex flex-col rounded-[32px] justify-between items-center`>
+<div class=`shadow-2xl ${type ? "bg-pri-80": "bg-white"} w-[30%] h-96 pt-20 pb-12 px-10 flex flex-col rounded-[32px] justify-between items-center`>
 	<img class="h-20" src={img_href}>
 	<div class=`${type ? "text-sec-80": "text-pri-80"} font-semibold text-2xl flex justify-center`>{title}</div>
-	<div class=`${type ? "text-white": "text-gray-500"} text-md flex text-center`>{body}</div>
+	<div class=`${type ? "text-white": "text-gray-500"} text-base flex text-center`>{body}</div>
 </div>
