--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,11 +3,13 @@ import Layout from '../layouts/Layout.astro';
 import Footer from '../components/Footer.astro';
 import Navbar from '../components/Navbar.astro';
 import Cards from '../components/Cards.astro';
+import UserCount from '../components/UserCount.astro';
 ---
 
 <Layout title="Main page">
 	<Navbar/>
 	<div class="p-4">Hello World!</div>
 	<Cards/>
+	<UserCount/>
 	<Footer/>
 </Layout>
