--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,14 @@ import Footer from '../components/Footer.astro';
 import Navbar from '../components/Navbar.astro';
 import Cards from '../components/Cards.astro';
 import UserCount from '../components/UserCount.astro';
+import Hero from '../components/Hero.jsx';
 ---
 
 <Layout title="Main page">
 	<Navbar/>
+	<div class="bg-hero-pattern bg-cover bg-no-repear bg-center">
+		<Hero/>
+	</div>
 	<div class="p-4">Hello World!</div>
 	<Cards/>
 	<UserCount/>
