--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -5,9 +5,9 @@ import Card from '../components/Card.astro';
 <div class="flex w-full flex-col items-center px-28">
     <div class="font-bold text-4xl">Real Savings, <span class="text-pri-100">Real Impacts</span></div>
     <div class="flex w-full justify-between pt-6">
-        <Card type={0 == 0} img_href="free-shipping.png" title='Free Shipping' body="We offer premium shipping at no additional cost, revolutionizing your online shopping experience." />
-        <Card type={0 == 1} img_href="exclusive-deals.png" title='Exclusive deals' body="We provide exclusive deals to students, making your college life more affordable than you ever imagined." />
-        <Card type={0 == 1} img_href="carbon-positive.png" title='Carbon positive' body="We are Australia's pioneering carbon-positive company, committed to global sustainability." />
+        <Card img_href="free-shipping.png" title='Free Shipping' body="We offer premium shipping at no additional cost, revolutionizing your online shopping experience." />
+        <Card img_href="exclusive-deals.png" title='Exclusive deals' body="We provide exclusive deals to students, making your college life more affordable than you ever imagined." />
+        <Card img_href="carbon-positive.png" title='Carbon positive' body="We are Australia's pioneering carbon-positive company, committed to global sustainability." />
     </div>
     <div class="h-40"></div>
 </div>
