--- a/src/components/UserCount.astro
+++ b/src/components/UserCount.astro
@@ -1,5 +1,11 @@
-<div class="h-96 w-full bg-gray-100 px-32 pt-20 pb-8">
+<div class="h-96 bg-gray-100 px-32 pt-20 pb-8">
     <div class="flex flex-col">
-        <div class="text-3xl font-sans font-bold"> Join 6023 others on the movement today!</div>
+        <div>
+            <div class="text-4xl font-sans font-bold"> Join 6,023 others <br> on the movement today!</div>
+            <div class="text-base font-sans pt-2">Stop wasting money and killing the earth</div>
+        </div>
+        <div class="items-center w-full flex justify-center pt-10 font-sans text-pri-100 text-base font-semibold">
+            <div class="rounded-full bg-sec-100 px-4 py-2 w-32"> Get started</div>
+        </div>
     </div>
 </div>
