--- a/src/components/UserCount.astro
+++ b/src/components/UserCount.astro
@@ -1,3 +1,7 @@
+---
+import {Icon} from 'astro-icon'
+---
+
 <div class="h-96 bg-gray-100 px-32 pt-20 pb-8">
     <div class="flex flex-col">
         <div>
@@ -5,7 +9,10 @@
             <div class="text-base font-sans pt-2">Stop wasting money and killing the earth</div>
         </div>
         <div class="items-center w-full flex justify-center pt-10 font-sans text-pri-100 text-base font-semibold">
-            <div class="rounded-full bg-sec-100 px-4 py-2 w-32"> Get started</div>
+            <div class="rounded-full bg-sec-100 px-6 py-3 w-40">Get started</div>
+            <div class="relative right-9 w-4 h-4">
+                <Icon class="absolute text-white" name="mdi:arrow-right"/>
+            </div>
         </div>
     </div>
 </div>
