--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Hero from "../components/Hero.jsx";
 import Slider from "../components/Testimonials.jsx";
 import { testimonial } from "../assets";
 import Carousel from "../components/Carousel.astro";
+import Accordion from "../components/accordion.jsx";
 ---
 
 <Layout title="Main page">
@@ -18,5 +19,6 @@ import Carousel from "../components/Carousel.astro";
   <Cards />
   <Slider client:load />
   <UserCount />
+  <Accordion client:load />
   <Footer />
 </Layout>
