--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,6 @@ import Form from "../components/Form.jsx";
   <Cards />
   <Slider client:load />
   <UserCount />
-  <Form />
+  <Form client:load />
   <Footer />
 </Layout>
