--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -2,7 +2,7 @@
 import Card from '../components/Card.astro';
 ---
 
-<div class="flex w-full flex-col items-center px-28">
+<div class="flex w-full flex-col items-center px-28 pt-28">
     <div class="font-bold text-4xl">Real Savings, <span class="text-pri-100">Real Impacts</span></div>
     <div class="flex w-full justify-between pt-6">
         <Card img_href="free-shipping.png" title='Free Shipping' body="We offer premium shipping at no additional cost, revolutionizing your online shopping experience." />
