--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,11 @@
+---
+import { Icon } from 'astro-icon';
+---
+
 <div class="shadow-2xl h-32 w-full flex px-28 items-center justify-between">
-  <div><img src="logo-img.png" /></div>
+  <div class="h-20 w-20">
+    <?xml version="1.0" encoding="UTF-8"?><svg id="Layer_1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 600"><defs><style>.cls-1{fill:#fff;}.cls-2{fill:#7323ad;}</style></defs><circle class="cls-2" cx="300" cy="300" r="288.81"/><circle class="cls-1" cx="368.56" cy="186.87" r="41.89"/><path class="cls-1" d="m428.17,323.71c-4.64-13.55-9.67-24.7-18.62-36.33-7.87-10.23-14.41-15.59-25.3-21.99-7.82-4.6-29.32-9.86-50.17-8.28-14.43,1.09-21,2.68-36.32,7.14v-60.13c0-8.14.59-25.65-6.16-40.53-5.63-12.42-19.7-21.18-37.29-23.16-2.19-.25-10.07-.64-12.33-.64h-20.86c-2.26,0-12.04.42-14.23.64-31.29,3.07-40.09,32.53-41.91,54.49-.13,1.57-.13,7.99,0,9.57,0,0,.98,192.78.98,196.2s2.15,23.41,2.89,30.18c2.45,22.48,27.82,41.18,45.85,42.87,12.29,1.16,72.34,1.87,72.34,1.87,2,0,30.02.15,43.04,0,8.92-.11,33.09-2.7,48.35-8.81,13.69-5.48,23.28-11.46,30.43-19.69,8.52-9.8,14.67-21.87,19.31-35.48,4.64-13.61,6.96-28.25,6.96-43.9s-2.32-30.43-6.96-43.99Z"/><circle class="cls-2" cx="324.12" cy="365.45" r="27.49"/></svg>
+    </div>
   <div class="flex font-semibold text-xl gap-24">
     <a
       href="#"
