--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -2,14 +2,16 @@
 interface Props {
 	title: string;
 	body: string;
-	img_href: string;
+	href: string;
 }
 
-const { title, body, img_href } = Astro.props;
+import { Icon } from 'astro-icon';
+
+const { title, body, href } = Astro.props;
 ---
 
 <div class=`transition hover:-translate-y-1 shadow-2xl bg-white group hover:bg-pri-80 w-[30%] h-96 pt-20 pb-12 px-10 flex flex-col rounded-[32px] justify-between items-center`>
-	<img class="h-20" src={img_href}>
+	<Icon class="h-20 group-hover:fill-white" name={href}/>
 	<div class=`group-hover:text-sec-80 text-pri-80 font-semibold text-2xl flex justify-center`>{title}</div>
 	<div class=`group-hover:text-white text-gray-500 text-base flex text-center`>{body}</div>
 </div>
