--- a/src/components/UserCount.astro
+++ b/src/components/UserCount.astro
@@ -2,7 +2,7 @@
 import { Icon } from "astro-icon";
 ---
 
-<div class="h-96 bg-gray-100 px-32 pt-20 pb-8">
+<div class="h-96 bg-gray-100 px-32 pt-20">
   <div class="flex flex-col">
     <div>
       <div class="text-4xl font-sans font-bold">
@@ -13,7 +13,7 @@ import { Icon } from "astro-icon";
         Stop wasting money and killing the earth
       </div>
     </div>
-    <div class="py-10">
+    <div class="pt-10">
       <a href="#joinus">
         <button
           type="submit"
