--- a/src/index.css
+++ b/src/index.css
@@ -326,3 +326,83 @@
   border-top:
     30px solid black;
 }
+
+
+html,
+body {
+  background: black;
+  padding: 0;
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.chronicle-button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+  line-height: 1;
+  border-radius: 0.7rem;
+  padding: .815rem 1.232rem;
+  cursor: pointer;
+  border: none;
+  background: white;
+  
+  transition: background .4s linear;
+  will-change: background;
+}
+
+.chronicle-button:hover {
+  background: #a594fd;
+}
+
+.chronicle-button:hover span:nth-of-type(1) em {
+  opacity: 0;
+  transform: rotateX(90deg) scaleX(.9) translate3d(0,-10px,0);
+}
+
+.chronicle-button:hover span:nth-of-type(2) em {
+  opacity: 1;
+  transform: rotateX(0deg) scaleX(1) translateZ(0);
+  transition: transform .75s cubic-bezier(.645,.045,.355,1),opacity .35s linear .3s;
+}
+
+.span {
+  position: relative;
+  display: block;
+  perspective: 108px;
+}
+
+.span:nth-of-type(2) {
+  position: absolute;
+}
+
+.em {
+  font-style: normal;
+  display: inline-block;
+  font-size: 1.125rem;
+  color: black;
+  font-weight: 600;
+  will-change: transform,opacity,transition;
+  transition: transform .55s cubic-bezier(.645,.045,.355,1),opacity .35s linear .2s;
+}
+
+.span:nth-of-type(1) em {
+  transform-origin: top;
+}
+
+.span:nth-of-type(2) em {
+  opacity: 0;
+  transform: rotateX(-90deg) scaleX(.9) translate3d(0,10px,0);
+  transform-origin: bottom;
+}
