--- a/src/components/UserCount.astro
+++ b/src/components/UserCount.astro
@@ -1,18 +1,27 @@
 ---
-import {Icon} from 'astro-icon'
+import { Icon } from "astro-icon";
 ---
 
 <div class="h-96 bg-gray-100 px-32 pt-20 pb-8">
-    <div class="flex flex-col">
-        <div>
-            <div class="text-4xl font-sans font-bold"> Join 6,023 others <br> on the movement today!</div>
-            <div class="text-base font-sans pt-2">Stop wasting money and killing the earth</div>
-        </div>
-        <div class="items-center w-full flex justify-center pt-10 font-sans text-pri-100 text-base font-semibold">
-            <div class="rounded-full bg-sec-100 px-6 py-3 w-40">Get started</div>
-            <div class="relative right-9 w-4 h-4">
-                <Icon class="absolute text-white" name="mdi:arrow-right"/>
-            </div>
-        </div>
+  <div class="flex flex-col">
+    <div>
+      <div class="text-4xl font-sans font-bold">
+        Join <span class="text-pri-100">6,023</span> others <br /> on the
+        movement today!
+      </div>
+      <div class="text-base font-sans pt-2">
+        Stop wasting money and killing the earth
+      </div>
     </div>
+    <div class="py-10">
+      <a href="#joinus">
+        <button
+          type="submit"
+          class="justify-center items-center bg-sec-100 py-2 px-10 rounded-xl outline-none w-fit text-black font-bold shadow-md shadow-primary"
+        >
+          Join Now.
+        </button>
+      </a>
+    </div>
+  </div>
 </div>
