changed form and pic

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,9 +1,25 @@
 <div class="shadow-2xl h-32 w-full flex px-28 items-center justify-between">
-    <div><img src="logo-img.png"></div>
-    <div class="flex font-semibold text-xl gap-24">
-        <a href="#" class="hover:underline decoration-sec-100 decoration-4 hover:underline-offset-2">Mission</a>
-        <a href="#" class="hover:underline decoration-sec-100 decoration-4 hover:underline-offset-2">About</a>
-        <a href="#" class="hover:underline decoration-sec-100 decoration-4 hover:underline-offset-2">Faq's</a>
-        <a href="#" class="hover:underline decoration-sec-100 decoration-4 hover:underline-offset-2">Support</a>
-    </div>
+  <div><img src="logo-img.png" /></div>
+  <div class="flex font-semibold text-xl gap-24">
+    <a
+      href="#"
+      class="hover:underline decoration-sec-100 decoration-4 hover:underline-offset-2"
+      >Mission</a
+    >
+    <a
+      href="#"
+      class="hover:underline decoration-sec-100 decoration-4 hover:underline-offset-2"
+      >About</a
+    >
+    <a
+      href="#"
+      class="hover:underline decoration-sec-100 decoration-4 hover:underline-offset-2"
+      >Faq's</a
+    >
+    <a
+      href="#"
+      class="hover:underline decoration-sec-100 decoration-4 hover:underline-offset-2"
+      >Support</a
+    >
+  </div>
 </div>
