--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -1,13 +1,27 @@
 ---
-import Card from '../components/Card.astro';
+import Card from "../components/Card.astro";
 ---
 
 <div class="flex w-full flex-col items-center px-28 pt-28">
-    <div class="font-bold text-4xl">Real Savings, <span class="text-pri-80">Real Impacts</span></div>
-    <div class="flex w-full justify-between pt-6">
-        <Card href="free-shipping" title='Free Shipping' body="We offer premium shipping at no additional cost, revolutionizing your online shopping experience." />
-        <Card href="deal" title='Exclusive deals' body="We provide exclusive deals to students, making your college life more affordable than you ever imagined." />
-        <Card href="co2" title='Carbon positive' body="We are Australia's pioneering carbon-positive company, committed to global sustainability." />
-    </div>
-    <div class="h-40"></div>
+  <div class="font-bold text-4xl">
+    Real Savings, <span class="text-pri-80">Real Impacts</span>
+  </div>
+  <div class="flex w-full justify-between pt-6">
+    <Card
+      href="free-shipping"
+      title="Free Shipping"
+      body="We offer premium shipping at no additional cost, revolutionizing your online shopping experience."
+    />
+    <Card
+      href="deal"
+      title="Exclusive deals"
+      body="We provide exclusive deals to students, making your college life more affordable than you ever imagined."
+    />
+    <Card
+      href="co2"
+      title="Carbon positive"
+      body="We are Australia's pioneering carbon-positive company, committed to global sustainability."
+    />
+  </div>
+  <div class="h-15"></div>
 </div>
