--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,8 +14,10 @@ import HowItWorks from "../components/HowItWorks.astro";
 
 <Layout title="Main page">
   <div class="relative w-full">
-    <img src="blobs/blob1.png" class="absolute top-0 right-0" />
+    <img src="blobs/blob1.png" class="absolute top-32 right-0" />
     <img src="blobs/blob2.png" class="absolute top-0 left-0" />
+    <img src="blobs/blob3.png" class="absolute top-[1800px] left-0" />
+    <img src="blobs/blob4.png" class="absolute bottom-0 right-0" />
         <div class="relative w-full z-10">
       <Navbar />
       <div class="bg-cover bg-no-repeat bg-center">
