--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,9 +16,11 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-
-    <link rel="stylesheet" href="src/components/button.css" />
-
+    <style>
+      html{
+        scroll-behavior: smooth;
+      }
+    </style>
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
