--- a/src/components/HowItWorks.astro
+++ b/src/components/HowItWorks.astro
@@ -9,8 +9,9 @@
       <div class="flex items-center h-full relative">
         <img src="laptop.png" class="absolute w-full" />
         <video
+          controls
           preload="auto"
-          autoplay
+          autoplay="autoplay"
           loop="loop"
           style="width: calc(77%);"
           class="absolute left-[11.5%]"
