--- a/src/components/HowItWorks.astro
+++ b/src/components/HowItWorks.astro
@@ -11,7 +11,8 @@
         <video
           controls
           preload="auto"
-          autoplay="autoplay"
+          autoplay
+          muted
           loop="loop"
           style="width: calc(77%);"
           class="absolute left-[11.5%]"
